--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Danh Sách Miền - Wibu Style</title>
+    <title>Danh Sách Miền </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
@@ -479,7 +479,7 @@
             <div class="logo">域</div>
             <div class="header-content">
                 <h1 class="title">Danh Sách Miền Đang Hoạt Động</h1>
-                <p class="subtitle">Giám sát và truy cập nhanh các miền của bạn với phong cách Wibu</p>
+                <p class="subtitle">Giám sát và truy cập nhanh các miền </p>
                 
                 <div class="toolbar">
                     <div class="search-box">
